Thu Sep  7 22:56:19 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/URL.cc (DefaultPort): Add file default port of 0.

	* htnet/HtFile.cc (Request): Handle directory listings by using
	scandir and generating minimal HTML file with appropriate noindex listing.

Wed Sep 06 10:00:50 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* htlib/URL.h, htlib/URL.cc: Restored corrected versions of URL.*
	* htnet/HtNNTP.h: Removed the error in the NNTP class declaration

Mon Sep 04 13:43:40 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* htnet/HtHTTP.cc: Restored previous version of HtHTTP. I removed
	an initialization in the constructor (_modification_time). Sorry.

Sun Sep  3 16:51:24 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc, htdig/Server.cc: Fix compiler warnings about
	String conversions.

	* configure, configure.in, db/configure, db/configure.in,
	db/acinclude.m4, db/aclocal.m4: Ensure --enable-bigfile is handled
	correctly by the configure scripts as pointed out by Jesse.

Fri Sep 01 23:28:43 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* URL.cc: added DefaultPort() method and changed NNTP default port
	from 523 to 119.
	* Document.cc: management of NNTP documents retrieval.

Fri Sep 01 19:05:02 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* htnet/HtNNTP.* : just created them ...
	* htnet/HtHTTP.cc : removed modification_time deletion in the
	class destructor.

Thu Sep 01 12:00:00 2000  Toivo Pedaste <toivo@ucs.uwa.edu.au>

	* htdig/Retriever.cc: Allow for modify time being set to
	current time if not available

Thu Aug 31 13:21:12 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc (allow_in_form, build_select_lists):
	Add clearer instructions to allow_in_form description, add
	cross-links between these two sections.

	* htdoc/attrs.html, cf_by{name,prog}.html: Reran cf_generate.pl.
